--- a/style.css
+++ b/style.css
@@ -116,6 +116,18 @@ section{
     color: #155fa0;
   }
 
+.card{
+    background-color: var(--sec);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+}  
+
+.card:hover{
+    position: relative;
+    bottom: 3px;
+}
+
 .btn{
     background-color: var(--prim) !important;
     color: white;
