--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ p {
     font-variant: normal;
     margin: 0 auto;
     color: #14304b;
-
     font-family: 'Quicksand', Arial, sans-serif; /* Fonten för brödtext, importerad genom head i index.html. ska se lite modern och lättläst ut */
   }
+
+
 
 hr{
     border-radius: 4px;
@@ -59,6 +60,8 @@ body{
     height: 400px;
     text-shadow: black 2px 2px 4px;
     border-radius: 5px;
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
 
 }
 
@@ -104,7 +107,7 @@ header .navbar{
     width: 2rem;
     border-radius: 1rem;
     text-align: center;
-    background-color: rgb(224, 224, 224);
+    background-color: var(--sec);
     z-index: 1;
   }
 
