--- a/style.css
+++ b/style.css
@@ -169,10 +169,17 @@ section{
     max-width: 600px;   /* Sätt önskad maxbredd */;
   }
 
+.carousel-caption{
+    background-color: rgba(255, 255, 255, 0.9); /* Halvtransparent bakgrund för texten */
+    border-radius: 5px;
+
+}
+
 .carousel-item img {
-    width: 100%; /* Gör bilden responsiv */
-    height: auto; /* Behåll bildens proportioner */
+    width: 100%; 
+    height: 450px;
     border-radius: 5px; /* Rundade hörn för bilderna */}
+
 
 footer{
     background-color: var(--sec);
