--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     font-variant: normal;
     color: var(--prim);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 p {
