--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6 {
     font-variant: normal;
     color: var(--prim);
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 p {
@@ -34,11 +34,13 @@ p {
 
 
 hr{
-    border-radius: 4px;
-    height: 5px;
+    border-radius: 4px !important;
+    height: 2px !important;
     width: 50%;
     margin: 40px auto;
     color: var(--prim);
+    background-color: var(--prim);
+
 }
 
 header{
