--- a/style.css
+++ b/style.css
@@ -22,20 +22,20 @@ h1{ /* Stilen för loggans titel */
   font-family: 'Quicksand', Arial, sans-serif;
 }
 
-h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 { /* typselektor för alla rubriker på hemsidan */
     font-family: 'Baloo 2', Arial, sans-serif ; /* Fonten för rubriker, importerad genom head i index.html. ska se lite mjuk och vänlig ut */
-    font-weight: 700; /* Fetstil för rubriker */
+    font-weight: 700; /* fetstil för rubriker */
     font-variant: normal;
     color: var(--prim);
     margin-top: 10px;
     margin-bottom: 15px;
 }
 
-p {
+p { /* typselektor för alla paragrafer på hemsidan */
     line-height: 150%; /* Radavstånd */
     margin-bottom: 24px; /* Avstånd mellan stycken */
     font-variant: normal;
-    margin: 0 auto;
+    margin: 0 auto; /* centrerar texten */
     color: var(--text);
     font-family: 'Quicksand', Arial, sans-serif; /* Fonten för brödtext, importerad genom head i index.html. ska se lite modern och lättläst ut */
 
@@ -72,7 +72,7 @@ header .navbar{
 
 .navbar-nav .nav-link{
     color: var(--text) ;
-    font-weight: 600;
+    font-weight: 600; /* fetstil för länkar i navbaren */
 
 }
 
@@ -81,7 +81,7 @@ header .navbar{
     text-decoration: underline; /* Understrykning vid hover */
 }
 
-.d-inline-block{ /* Logotypen i navbaren */
+.d-inline-block{ /* Logotypen i headern */
   margin-right: 30px !important;
   height: 70px;
   width: 70px;
@@ -94,11 +94,11 @@ header .navbar{
    STILAR FÖR BODYNS INNEHÅLL
    ======================== */
 
-body{
+body{ /* typselektor allmänt för hela bodyn */
   line-height: 150%; /* Radavstånd */
   margin-bottom: 24px; /* Avstånd mellan stycken */
   font-variant: normal;
-  font-size: 18px;
+  font-size: 18px; /* fontstorlek för hela bodyn */
   font-family: 'Quicksand', Arial, sans-serif !important; /* grundfonten för hela bodyn*/
   background-color: #e6f2fb;
   margin: 15px; 
@@ -121,16 +121,16 @@ main{
    ======================== */
 
 
-.jumbotroncontainer {
+.jumbotroncontainer { /* design för jumbotronen som är en stor sektion med bakgrundsbild */
   background-size: cover;
   color: white;
-  background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0)), url(images/home-background.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0)), url(images/home-background.jpg); /* bakgrundsbild med en mörk overlay för bättre läsbarhet */
   height: 400px;
-  text-shadow: black 2px 2px 4px;
+  text-shadow: black 2px 2px 4px; /* skapar en skugga för texten så den syns bättre */
   border-radius: 5px;
   margin-top: 20px !important;
   margin-bottom: 20px !important;
-  background-position: center;
+  background-position: center; /* centrerar bakgrundsbilden i y led*/
 }
 
 /* ========================
@@ -145,13 +145,10 @@ main{
   margin-bottom: 20px;
 }  
 
-.card h3{
+.card h3, .card h4{
     color: var(--prim); /* skriver över bootstrap för rubriker i kort */
   }
 
-.card h4{
-    color: var(--prim); /* skriver över bootstrap för rubriker i kort */
-}
 
 .card-header{
     background-color: var(--prim); /* bakgrundsfärg för headern i kort */
@@ -161,7 +158,7 @@ main{
   
   .card-header h3{
     color: white;  /* skriver över för rubriker i header i kort */
-    font-weight: 700; 
+    font-weight: 700;  
   }
 
 .card i{ /* design för ikoner i korten */
@@ -171,7 +168,6 @@ main{
 
 .card:hover{
     transform: translateY(-2px); /* lyfter kortet lite vid hover */
-    background-color: #e6f2fb;
     box-shadow: #14304b 0px 1px 2px; /* lägger till en skugga för djup */
 }
 
@@ -210,11 +206,11 @@ main{
    ======================== */
 
 
-#carouselExample{
+#carouselExample{ /* design för karusellen som är ett slags bildspel */
     max-width: 600px;
   }
 
-.carousel-caption{
+.carousel-caption{ /* design för bildtexten i karusellen */
     background-color: rgba(255, 255, 255, 0.9); /* Halvtransparent bakgrund där texten är*/
     border-radius: 5px;
 }
@@ -228,7 +224,8 @@ main{
 /* ========================
    Kontaktformulär design
    ======================== */
-.contactform{
+
+.contactform{ /* design för kontaktformuläret */
   background-color: var(--sec);
   border-radius: 5px;
   }
@@ -239,12 +236,12 @@ main{
 
 #toppnav { /* design för toppnavigationssymbolen */
   position: fixed; /* fäster symbolen längst ner till vänster */
-  bottom: 1rem;
-  left: 1.3rem;
+  bottom: 1rem; 
+  left: 1.3rem; 
   height: 2rem;
   width: 2rem;
   border-radius: 1rem; /* rund */
-  text-align: center;
+  text-align: center; /* centrerar pilen i symbolen */
   background-color: var(--sec);
   z-index: 1; /* gör att den ligger över andra element */
 }
@@ -254,7 +251,7 @@ main{
    ======================== */
 
 
-footer{
+footer{ /* design för footern */
     background-color: var(--sec);
     padding: 20px;
     border-radius: 5px;
@@ -283,13 +280,13 @@ footer{
     width: 50%;
     margin-top: 20px;
     padding-top: 10px;
-    text-align: center;
+    text-align: center; /* centrerar texten */
     font-size: 0.9em;
-    margin: 0 auto;
+    margin: 0 auto; 
   }
 
-  .footer-bottom a{
-    color: var(--prim)
+  .footer-bottom a{ 
+    color: var(--prim) ; /* ändrar färg för länkar i footern */
 
   }
 
@@ -298,12 +295,12 @@ footer{
    Sociala medier ikoner i footer och kontakt
    ======================== */
 
-  .social-icons-contact{
+  .social-icons-contact{ /* design för sociala medier ikoner i konktsidan från boxicons, importeras i head */
     display: flex; /* gör att ikonerna ligger bredvid varandra */
     flex-wrap: wrap; /* gör att ikonerna kan brytas till nästa rad om sidan krymps */
     margin: 10px;
   }
-  .social-icons a {
+  .social-icons a { /* design specifikt för sociala medier ikoner i footern */
     font-size: 28px;
     margin-top: 20px;
     margin-right: 10px;
@@ -312,7 +309,7 @@ footer{
     transition: color 0.3s ease; /* gör att färgen ändras smidigt vid hover */
   }
 
-  .social-icons-contact a {
+  .social-icons-contact a { /* design specifikt för sociala medier ikoner i kontaktsidan */
     font-size: 20px;
     margin-top: 20px;
     margin-right: 10px;
@@ -321,10 +318,7 @@ footer{
     transition: color 0.3s ease; /* gör att färgen ändras smidigt vid hover */
   }
 
-  .social-icons a:hover {
-    color: var(--prim); /* ändrar färg vid hover */
-  }
-  .social-icons-contact a:hover {
-    color: var(--prim);
-  }
+  .social-icons a:hover, .social-icons-contact a:hover {
+  color: var(--prim); /* ändrar färg vid hover */
+}
 
